--- a/app/src/main/res/layout/fragment_compass.xml
+++ b/app/src/main/res/layout/fragment_compass.xml
@@ -3,6 +3,7 @@
     android:id="@+id/rl_bottom_compass"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:gravity="center">
 
     <com.star.widget.CompassView
@@ -10,6 +11,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
-        android:alpha="0.4" />
+        android:alpha="0.6" />
 
 </LinearLayout>
